--- a/src/Row.css
+++ b/src/Row.css
@@ -8,25 +8,65 @@
     padding-top: 10px;
     color: #e2d8d8;
     background-color: #111;
-
 }
 
-.row-posters{
+.row-posters {
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
     padding: 20px 0 20px 10px;
     background-color: #151515;
     border-radius: 3px;
+}
+
+.test{
+    position: relative;
 
 }
+.test1L{
+    position: absolute;
+    color: white;
+    top: 0;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 70px;
+    width:133px ;
+    height: 130px;
+    opacity: 0;
+    transition: all ease-in-out 300ms;
+}
+
+.test1L:hover{
+    opacity: 0.8;
+    background-color: rgba(51, 51, 51, 0.4);
+    cursor: pointer;
+}
+
+.test1{
+    position: absolute;
+    color: white;
+    font-weight: bold;
+    top: 0;
+    left: 0;
+    padding-top: 30px;
+    width:177px ;
+    height: 70px;
+    opacity: 0;
+    transition: all ease-in-out 300ms;
+}
+.test1:hover{
+    opacity: 0.8;
+    background-color: rgba(51, 51, 51, 0.9);
+    cursor: pointer;
+}
+
 .row-posters::-webkit-scrollbar{
     display: none;
 }
 
 .row-posters-poster{
     object-fit: contain;
-    width: 100%;
+    width: 177px;
     max-height: 100px;
     margin-right: 10px;
     transition: all 450ms;
@@ -34,7 +74,7 @@
 }
 .row-posters-posterL{
     object-fit: contain;
-    width: 100%;
+    width: 133px;
     max-height: 200px;
     margin-right: 10px;
     transition: all 450ms;
