--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   margin: 0;
 }
 
+*::-webkit-scrollbar{
+  display: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
